--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,29 +4,33 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "MovieStore - Online movies" %></title>
+    <link rel="shortcut icon" href="<%=asset_path("logo.png")%>" >
 
-    <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+
+    <%= stylesheet_link_tag "application" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
-    <%= render "layouts/header" %>
 
-  <%= render "layouts/alerts" %>
+    <%= render "layouts/header"%>
 
-  <div id="main-content" class="row full-min-height">
-    <%= yield %>
-  </div>
+    <%= render "layouts/alerts" %>
 
-  <footer class="row">
-    <div class="large-12 columns">
-      <hr> <p>© MovieStore 2017</p>
+    <div id="main-content" class="row full-min-height">
+      <%= yield %>
     </div>
-  </footer>
 
-  <%= javascript_include_tag "application" %>
+    <footer class="row">
+      <div class="large-12 columns">
+        <hr>
+        <p>© MovieStore 2017</p>
+      </div>
+    </footer>
 
+    <%= javascript_include_tag "application" %>
+    
   </body>
 </html>
