--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,12 +12,18 @@
         <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
       </ul>
 
-      <section class="top-bar-section">
-        <ul class="right">
-          <li><%=link_to "Register", "#" %></li>
-          <li><%=link_to "Login", "#" %></li>
-        </ul>
-      </section>
+    <section class="top-bar-section">
+         
+      <ul class="right">
+        <%if signed_in?%>
+          <li><%=link_to current_user.email, edit_user_registration_path%></li>
+          <li><%=link_to "Logout", destroy_user_session_path, method: :delete%></li>
+        <%else%>
+          <li><%=link_to "Register", new_user_registration_path%></li>
+          <li><%=link_to "Login", new_user_session_path%></li>
+        <%end%>
 
-    </nav>
+      </ul>
+    </section>
+  </nav>
 </div>
