modification and rename file

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -6,9 +6,8 @@
 }
 // Body background
 body {
-  background-image: url(body_bg.png);
   background-position: center;
-  color: #fff;
+  background-color: black;
 }
 // Logo
 .title-area{
