--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
   <nav class="top-bar column" data-topbar>
-
+    <h4> WELCOME TO G.A MOVIES</h4>
       <ul class="title-area">
         <li class="name">
           <h1>
             <a href="/">
-              <i class="fi-play-video"></i> MovieStore
+              <i class="fi-play-video"></i> Store
             </a>
           </h1>
         </li>
