--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,5 @@
-<h4 class="column">Featured Movies</h4>
+
+<h4 class="column">Movie List</h4>
 <div class="column">
   <ul class="movies-grid no-bullet row">
     <% @movies.each do |movie| %>
