--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "MovieStore - Online movies" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "G.A Movies - Online movies" %></title>
     <link rel="shortcut icon" href="<%=asset_path("logo.png")%>" >
+    <link rel="stylesheet" href="../../stylesheet.layout.css" >
 
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
@@ -25,7 +26,7 @@
     <footer class="row">
       <div class="large-12 columns">
         <hr>
-        <p>© MovieStore 2017</p>
+        <p>© G.A MovieStore 2017</p>
       </div>
     </footer>
 
