configure environment to work with heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "G.A Movies - Online movies" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "gaMovies " %></title>
     <link rel="shortcut icon" href="<%=asset_path("logo.png")%>" >
     <link rel="stylesheet" href="../../stylesheet.layout.css" >
 
