--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -7,7 +7,8 @@
 // Body background
 body {
   background-position: center;
-  background-color: black;
+
+  background-color: #2d2827;
 }
 // Logo
 .title-area{
@@ -19,7 +20,7 @@ body {
   }
 }
 // Topbar items
-.top-bar-section ul li { background: transparent }
+.top-bar-section ul li { background: #767a5f }
 // Forms
 .form-container {
   padding: 3% 3%;
