--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -14,7 +14,7 @@
             </div>
             <p class="left price label movie-label radius">$ <%= movie.price %></p>
             <%= link_to movie.imdb, class: "right" do %>
-              <%= image_tag asset_path("imdb_logo.png") %>
+              <%= image_tag asset_path("imdb_movie Demo.png") %>
             <% end %>
           </div>
         </div>
